--- a/13.프로퍼티 어트리뷰트.md
+++ b/13.프로퍼티 어트리뷰트.md
@@ -144,4 +144,116 @@ console.log(descriptor);
     </tr>
   </tbody>
 </table>
+</br>
 
+---
+
+
+## 프로퍼티 정의
+- 프로퍼티를 추가할때 프로퍼티 어트리뷰트를 명시적으로 (재)정의 하는것
+- 앞서 살펴본 갱신가능여부, 열거가능여부, 재정의가능여부를 정의 할 수 있음
+- Objesct.defineProperty 메서드로 정의가능하며 인수로 객체의 참조, 데이터프로퍼티의 key(문자열), 프로퍼티 디스크립터 객체를 전달
+```
+const person = {};
+
+// 데이터 프로퍼티 정의
+Object.defineProperty(person, 'firstName', {
+  value: 'Ungmo',
+  writable: true,
+  enumerable: true,
+  configurable: true
+});
+
+Object.defineProperty(person, 'lastName', {
+  value: 'Lee'
+});
+
+let descriptor = Object.getOwnPropertyDescriptor(person, 'firstName');
+console.log('firstName', descriptor);
+// firstName {value: "Ungmo", writable: true, enumerable: true, configurable: true}
+
+// 디스크립터 객체의 프로퍼티를 누락시키면 undefined, false가 기본값이다.
+descriptor = Object.getOwnPropertyDescriptor(person, 'lastName');
+console.log('lastName', descriptor);
+// lastName {value: "Lee", writable: false, enumerable: false, configurable: false}
+
+// [[Enumerable]]의 값이 false인 경우
+// 해당 프로퍼티는 for...in 문이나 Object.keys 등으로 열거할 수 없다.
+// lastName 프로퍼티는 [[Enumerable]]의 값이 false이므로 열거되지 않는다.
+console.log(Object.keys(person)); // ["firstName"]
+
+// [[Writable]]의 값이 false인 경우 해당 프로퍼티의 [[Value]]의 값을 변경할 수 없다.
+// lastName 프로퍼티는 [[Writable]]의 값이 false이므로 값을 변경할 수 없다.
+// 이때 값을 변경하면 에러는 발생하지 않고 무시된다.
+person.lastName = 'Kim';
+
+// [[Configurable]]의 값이 false인 경우 해당 프로퍼티를 삭제할 수 없다.
+// lastName 프로퍼티는 [[Configurable]]의 값이 false이므로 삭제할 수 없다.
+// 이때 프로퍼티를 삭제하면 에러는 발생하지 않고 무시된다.
+delete person.lastName;
+
+// [[Configurable]]의 값이 false인 경우 해당 프로퍼티를 재정의할 수 없다.
+// Object.defineProperty(person, 'lastName', { enumerable: true });
+// Uncaught TypeError: Cannot redefine property: lastName
+
+descriptor = Object.getOwnPropertyDescriptor(person, 'lastName');
+console.log('lastName', descriptor);
+// lastName {value: "Lee", writable: false, enumerable: false, configurable: false}
+
+// 접근자 프로퍼티 정의
+Object.defineProperty(person, 'fullName', {
+  // getter 함수
+  get() {
+    return `${this.firstName} ${this.lastName}`;
+  },
+  // setter 함수
+  set(name) {
+    [this.firstName, this.lastName] = name.split(' ');
+  },
+  enumerable: true,
+  configurable: true
+});
+
+descriptor = Object.getOwnPropertyDescriptor(person, 'fullName');
+console.log('fullName', descriptor);
+// fullName {get: ƒ, set: ƒ, enumerable: true, configurable: true}
+
+person.fullName = 'Heegun Lee';
+console.log(person); // {firstName: "Heegun", lastName: "Lee"}
+```
+---
+- Object.defineProperty 메서드로 프로퍼티 정의시 프로퍼티 디스크립터객체의 프로퍼티를 생략가능(기본값 존재함)
+- 한번에 하나의 프로퍼티만 정의가능, 여러개하려면 Object.definePropertys 메서드 사용
+<table>
+  <thead>
+    <tr>
+      <th style="text-align: left">프로퍼티 어트리뷰트</th>
+      <th style="text-align: left">프로퍼티 디스크립터 객체의 프로퍼티</th>
+      <th style="text-align: left">설명</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: left">[[Get]]</td>
+      <td style="text-align: left">get</td>
+      <td style="text-align: left">접근자 프로퍼티를 통해 데이터 프로퍼티의 값을 읽을 때 호출되는 접근자 함수다. 즉, 접근자 프로퍼티 키로 프로퍼티 값에 접근하면 프로퍼티 어트리뷰트 [[Get]]의 값, 즉 getter 함수가 호출되고 그 결과가 프로퍼티 값으로 반환된다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Set]]</td>
+      <td style="text-align: left">set</td>
+      <td style="text-align: left">접근자 프로퍼티를 통해 데이터 프로퍼티의 값을 저장할 때 호출되는 접근자 함수다. 즉, 접근자 프로퍼티 키로 프로퍼티 값을 저장하면 프로퍼티 어트리뷰트 [[Set]]의 값, 즉 setter 함수가 호출되고 그 결과가 프로퍼티 값으로 저장된다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Enumerable]]</td>
+      <td style="text-align: left">enumerable</td>
+      <td style="text-align: left">데이터 프로퍼티의 [[Enumerable]]과 같다.</td>
+    </tr>
+    <tr>
+      <td style="text-align: left">[[Configurable]]</td>
+      <td style="text-align: left">configurable</td>
+      <td style="text-align: left">데이터 프로퍼티의 [[Configurable]]과 같다.</td>
+    </tr>
+  </tbody>
+</table>
+---
+</br>
